erDiagram
    %% CORE ENTITIES
    
    boards {
        text id PK
        text name
        text user_id
        text background_url
        text background_public_id
        text background_color
    }
    
    lists {
        text id PK
        text name
        integer order
        text board_id FK
    }
    
    cards {
        text id PK
        text name
        text description
        integer order
        text list_id FK
        text cover_url
        text cover_public_id
        text cover_color
        text cover_mode
        timestamp start_date
        timestamp deadline
        timestamp due_at
        boolean due_complete
        integer reminder_minutes
        text recurrence
        integer recurrence_day
        integer recurrence_weekday
        text repeat_frequency
        integer repeat_interval
        integer latitude
        integer longitude
        boolean completed
        boolean is_template
        timestamp created_at
        timestamp updated_at
    }
    
    checklist_items {
        text id PK
        text name
        boolean completed
        integer order
        text card_id FK
    }
    
    attachments {
        text id PK
        text name
        text url
        text public_id
        text type
        integer size
        timestamp uploaded_at
        text uploaded_by
        text card_id FK
    }
    
    labels {
        text id PK
        text name
        text color
        text user_id
    }
    
    board_members {
        text id PK
        text board_id FK
        text user_id
        text name
        text email
        text avatar
        text role
        timestamp added_at
    }
    
    comments {
        text id PK
        text card_id FK
        text user_id
        text content
        timestamp created_at
    }
    
    activities {
        text id PK
        text card_id FK
        text user_id
        text action_type
        text description
        text metadata
        timestamp created_at
    }
    
    due_reminder_log {
        text id PK
        text card_id FK
        text user_id
        timestamp due_at_snapshot
        integer reminder_minutes
        timestamp sent_at
    }
    
    %% JUNCTION TABLES
    
    card_labels {
        text id PK
        text card_id FK
        text label_id FK
    }
    
    card_members {
        text id PK
        text card_id FK
        text member_id FK
    }
    
    %% TEMPLATE SYSTEM
    
    board_templates {
        text id PK
        text name
        text description
        text category
        text user_id
        boolean is_public
        text background_url
        text background_color
        timestamp created_at
        timestamp updated_at
    }
    
    template_lists {
        text id PK
        text name
        integer order
        text template_id FK
    }
    
    template_cards {
        text id PK
        text name
        text description
        integer order
        text template_list_id FK
    }
    
    template_labels {
        text id PK
        text name
        text color
        text template_id FK
    }
    
    %% RELATIONSHIPS
    boards ||--o{ lists : contains
    boards ||--o{ board_members : has
    
    lists ||--o{ cards : contains
    
    cards ||--o{ checklist_items : has
    cards ||--o{ attachments : has
    cards ||--o{ comments : has
    cards ||--o{ activities : logs
    cards ||--o{ card_labels : has
    cards ||--o{ card_members : assigned
    cards ||--o{ due_reminder_log : has
    
    labels ||--o{ card_labels : applied
    board_members ||--o{ card_members : assigned
    
    board_templates ||--o{ template_lists : contains
    board_templates ||--o{ template_labels : has
    template_lists ||--o{ template_cards : contains
